Restores correct font to submit buttons & adds spacing; Compiles SASS

--- a/sites/all/themes/doit/sass/user-registration.sass
+++ b/sites/all/themes/doit/sass/user-registration.sass
@@ -102,7 +102,7 @@ p
     position: absolute
     top: -15px
     right: -15px
-    width: 3em
+    width: auto
     font-size: 14px
 
 .toolbar.mobile
@@ -196,7 +196,8 @@ form
     display: none
 
   #edit-final-submit, #edit-submit
-    margin: 0
+    font-family: din-web-reg
+    margin: 1em 0 0.5em
     padding: 0.2em 1em 0.25em
     clear: both
     float: left
@@ -259,11 +260,6 @@ form
 
   .form-item-year
     width: 3.5em
-
-  .ds-login-popup-footer
-    margin: 1em 0
-    float: left
-    clear: both
 
   .already-member
     float: left
@@ -329,7 +325,7 @@ input[type="password"]
 
 .forgot-password-link
   display: block
-  padding: 1em 0
+  padding: 1em 0 0
 
 // HIDE THE BODIES
 // ---------------
